startQuiz() logic to populate the screen dynamically

--- a/index.html
+++ b/index.html
@@ -11,10 +11,21 @@
   <body>
     <header>
       <button id="highscore">View Highscores</button>
-      <p>Time:</p>
+      <p id="timer">Time:</p>
     </header>
 
-    <div class="quiz-box"></div>
+    <div class="quiz-box">
+      <h1 class="title">Code Quiz</h1>
+      <div class="question-box">
+        <p>
+          Try to answer the following code-related questions within the time
+          limit. Keep in mind the incorrect answer will penalize your score by
+          ten seconds!
+        </p>
+      </div>
+
+      <button id="start">Start Quiz</button>
+    </div>
     <script src="./Assets/script.js"></script>
   </body>
 </html>
