styling applied to dynamic elements

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <div class="quiz-box">
-      <h1 class="title">Code Quiz</h1>
+      <h1 class="title">Code Quiz Challenge</h1>
       <div class="question-box">
         <p>
           Try to answer the following code-related questions within the time
