all major changes made to the UI and functions and styles added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="quiz-box">
       <h1 class="title">Code Quiz Challenge</h1>
       <div class="question-box">
-        <p>
+        <p id="instructions">
           Try to answer the following code-related questions within the time
           limit. Keep in mind the incorrect answer will penalize your score by
           ten seconds!
